@@ -1,11 +1,359 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>ProyectoPrincipal</groupId>
-  <artifactId>ProyectoPrincipal</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <modules>
-    <module>api</module>
-  </modules>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>ec.com.live</groupId>
+    <artifactId>economia</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <name>economia</name>
+    <properties>
+        <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
+        <project.proyecto.base.version>${project.version}</project.proyecto.base.version>
+        <java.jdk.version>1.8</java.jdk.version>
+        <plugin.jar.version>2.4</plugin.jar.version>
+        <plugin.war.version>2.2</plugin.war.version>
+        <plugin.ejb.version>2.3</plugin.ejb.version>
+        <plugin.ear.version>2.8</plugin.ear.version>
+        <plugin.compiler.version>2.4</plugin.compiler.version>
+        <plugin.site.version>3.0</plugin.site.version>
+        <plugin.reports.version>2.4</plugin.reports.version>
+        <plugin.releases.version>2.3.1</plugin.releases.version>
+        <plugin.cobertura.version>2.6</plugin.cobertura.version>
+        <plugin.surefire.version>2.11</plugin.surefire.version>
+        <plugin.surefire.report.version>2.9</plugin.surefire.report.version>
+        <plugin.jxr.version>2.3</plugin.jxr.version>
+        <plugin.pmd.version>3.0.1</plugin.pmd.version>
+        <plugin.pmd.ruleset>${repositorio.releases.url}/ec/gob/sri/resources/reglas-pmd-sri/2.1/reglas-pmd-sri-2.1.xml</plugin.pmd.ruleset>
+        <plugin.pmd.exclude>${project.parent.basedir}/src/main/resources/exclude-pmd.properties</plugin.pmd.exclude>
+        <plugin.findbugs.version>2.5</plugin.findbugs.version>
+        <javaee6.with.tools.version>1.0.7.Final</javaee6.with.tools.version>
+        <repositorio.snapshots.url>http://sriarqic02:8081/nexus/content/repositories/snapshots/</repositorio.snapshots.url>
+        <issue.management.url>http://10.21.50.255:8000/estandares-desarrollo/report/3</issue.management.url>
+        <scm.url>https://10.2.4.21/proyecto-base/trunk</scm.url>
+        <scm.connection>scm:svn:https://10.2.4.21/proyecto-base/trunk</scm.connection>
+        <scm.developer.connection>scm:svn:https://10.2.4.21/proyecto-base/trunk</scm.developer.connection>
+        <csi.management.url>http://10.21.50.255:8080/job/proyecto-base-cr</csi.management.url>
+        <developer.id>excz010715</developer.id>
+        <developer.name>EDU</developer.name>
+        <developer.email>exconrado@sri.gob.ec</developer.email>
+        <developer.role>desarrollador</developer.role>
+        <!-- Security Domain -->
+        <persistence-unit-name></persistence-unit-name>
+        <data-source-name></data-source-name>
+        <!-- Richfaces -->
+        <org.richfaces.bom.version>4.2.2.Final</org.richfaces.bom.version>
+        <!-- para cambio de version  P.B. -->
+        <project.version>1.0.0-SNAPSHOT</project.version>
+    </properties>
+    <issueManagement>
+        <system>Trac</system>
+        <url>${issue.management.url}</url>
+    </issueManagement>
+    <scm>
+        <connection>${scm.connection}</connection>
+        <developerConnection>${scm.developer.connection}</developerConnection>
+        <url>${scm.url}</url>
+    </scm>
+    <ciManagement>
+        <system>Hudson CI</system>
+        <url>${csi.management.url}</url>
+    </ciManagement>
+
+    <developers>
+        <developer>
+            <id>${developer.id}</id>
+            <name>${developer.name}</name>
+            <email>${developer.email}</email>
+            <organization>Servicio de Rentas Internas</organization>
+            <organizationUrl>www.sri.gob.ec</organizationUrl>
+            <roles>
+                <role>${developer.role}</role>
+            </roles>
+        </developer>
+    </developers>
+    <modules>
+        <module>economia-ear</module>
+        <module>economia-web</module>
+        <module>economia-ejb</module>
+        <module>api</module>
+        <module>persistencia</module>
+    </modules>
+    <build>
+        <plugins>
+            <!-- Compila el proyecto con la version de JDK especificada -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${plugin.compiler.version}</version>
+                <configuration>
+                    <source>${java.jdk.version}</source>
+                    <target>${java.jdk.version}</target>
+                </configuration>
+            </plugin>
+            <!-- Site plugin para maven 3 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>${plugin.site.version}</version>
+            </plugin>
+            <!-- Plugin de reportes -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>${plugin.reports.version}</version>
+            </plugin>
+            <!-- Liberacion versiones -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>${plugin.releases.version}</version>
+                <configuration>
+                    <allowTimestampedSnapshots>false</allowTimestampedSnapshots>
+                </configuration>
+            </plugin>
+            <!-- Ejecuta solamente las pruebas unitarias -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${plugin.surefire.version}</version>
+                <configuration>
+                    <argLine>-XX:PermSize=512m -XX:MaxPermSize=512m
+                        -XX:-UseSplitVerifier</argLine>
+                    <includes>
+                        <include>**/*Test.java</include>
+                        <include>**/*TestCase.java</include>
+                        <include>**/*UnitTest.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
+			
+        </plugins>
+        <pluginManagement>
+            <plugins>
+                <!-- Plugin para ejecutar jrebel -->
+                <plugin>
+                    <groupId>org.zeroturnaround</groupId>
+                    <artifactId>jrebel-maven-plugin</artifactId>
+                    <version>1.1.3</version>
+                    <executions>
+                        <execution>
+                            <id>generate-rebel-xml</id>
+                            <phase>process-resources</phase>
+                            <goals>
+                                <goal>generate</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <!-- Para Servlet 3.0 no se requiere el descriptor web.xml -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>${plugin.war.version}</version>
+                    <configuration>
+                        <failOnMissingWebXml>false</failOnMissingWebXml>
+                    </configuration>
+                </plugin>
+                <!-- Habilita la generación del jar de pruebas -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>${plugin.jar.version}</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>test-jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+    <dependencyManagement>
+		<dependencies>
+			<!-- Modulos del proyecto -->
+			<!-- JEE6 stack -->
+			<!--<dependency>
+				<groupId>org.jboss.bom</groupId>
+				<artifactId>jboss-javaee-6.0-with-tools</artifactId>
+				<version>${javaee6.with.tools.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.spec</groupId>
+				<artifactId>jboss-javaee-6.0</artifactId>
+				<version>3.0.2.Final</version>
+				<type>pom</type>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.ejb3</groupId>
+				<artifactId>jboss-ejb3-ext-api</artifactId>
+				<version>1.0.0</version>
+				<scope>provided</scope>
+			</dependency>-->
+			<!-- Pruebas -->
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.10</version>
+				<scope>test</scope>
+			</dependency>
+			<!--<dependency>
+				<groupId>org.powermock</groupId>
+				<artifactId>powermock-module-junit4</artifactId>
+				<version>1.5.1</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.powermock</groupId>
+				<artifactId>powermock-api-mockito</artifactId>
+				<version>1.5.1</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-all</artifactId>
+				<version>1.9.5</version>
+				<scope>test</scope>
+			</dependency>-->
+			<dependency>
+				<groupId>log4j</groupId>
+				<artifactId>log4j</artifactId>
+				<version>1.2.16</version>
+				<type>jar</type>
+				<scope>provided</scope>
+			</dependency>
+			<!-- Capa Presentacion -->
+			<!--<dependency>
+				<groupId>org.richfaces</groupId>
+				<artifactId>richfaces-bom</artifactId>
+				<version>${org.richfaces.bom.version}</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>-->
+			<!-- Módulos Proyecto -->
+			<dependency>
+				<groupId>ec.com.live.economia</groupId>
+				<artifactId>persistencia</artifactId>
+				<version>1.0-SNAPSHOT</version>
+				<type>ejb</type>
+			</dependency>
+			<dependency>
+				<groupId>ec.com.live.economia</groupId>
+				<artifactId>economia-ejb</artifactId>
+				<version>1.0-SNAPSHOT</version>
+				<type>ejb</type>
+			</dependency>
+			<!--<dependency>
+				<groupId>ec.gob.sri.inteligenciaTributaria</groupId>
+				<artifactId>inteligenciaTributaria-api</artifactId>
+				<version>${project.proyecto.base.version}</version>
+				<type>ejb</type>
+			</dependency>-->
+			<dependency>
+				<groupId>ec.com.live.economia</groupId>
+				<artifactId>economia-web</artifactId>
+				<version>1.0-SNAPSHOT</version>
+				<type>war</type>
+			</dependency>
+                        <dependency>
+				<groupId>ec.com.live.economia</groupId>
+				<artifactId>api</artifactId>
+				<version>1.0-SNAPSHOT</version>
+				<type>jar</type>
+			</dependency>
+                       <!--
+			<dependency>
+				<groupId>ec.gov.sri.grupostrabajo</groupId>
+				<artifactId>genGruposTrabajo-core</artifactId>
+				<version>2.0.3</version>
+				<scope>provided</scope>
+			</dependency>
+			 
+			<dependency>
+				<groupId>ec.gov.sri.plantillas</groupId>
+				<artifactId>genPlantillasDocumentos-core</artifactId>
+				<version>1.1.0</version>
+				<scope>provided</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>ec.gob.sri</groupId>
+				<artifactId>ruc</artifactId>
+				<version>3.2</version>
+				<scope>provided</scope>
+			</dependency>
+            
+			<dependency>
+				<groupId>ec.gob.sri</groupId>
+				<artifactId>persona</artifactId>
+				<version>1.1.9</version>
+				<scope>provided</scope>
+			</dependency>
+             -->
+
+
+
+
+
+			<!-- Persistencia -->
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-core</artifactId>
+				<version>3.6.0.Final</version>
+				<scope>provided</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-validator</artifactId>
+				<version>4.2.0.Final</version>
+				<scope>provided</scope>
+			</dependency>
+
+			<!-- libreria para manipulacion de archivos -->
+			<dependency>
+				<groupId>org.apache.poi</groupId>
+				<artifactId>poi</artifactId>
+				<version>3.8</version>
+			</dependency>
+			<dependency>
+				<groupId>com.google.code.gson</groupId>
+				<artifactId>gson</artifactId>
+				<version>2.2.2</version>
+			</dependency>
+
+			<!-- Librerias para la invocacion a webservice SOAP con clientes axis -->
+			
+			<dependency>
+				<groupId>apache-discovery</groupId>
+				<artifactId>commons-discovery</artifactId>
+				<version>0.2</version>
+				<scope>provided</scope>
+			</dependency>
+
+			<!-- Librerias para el reporting(DynamicReports) -->
+			<dependency>
+				<groupId>net.sourceforge.dynamicreports</groupId>
+				<artifactId>dynamicreports-core</artifactId>
+				<version>3.2.1</version>
+			</dependency>
+			<dependency>
+				<groupId>net.sourceforge.dynamicreports</groupId>
+				<artifactId>dynamicreports-adhoc</artifactId>
+				<version>3.2.1</version>
+			</dependency>
+			<dependency>
+				<groupId>net.sourceforge.dynamicreports</groupId>
+				<artifactId>dynamicreports-googlecharts</artifactId>
+				<version>3.2.1</version>
+			</dependency>
+
+		</dependencies>
+
+
+	</dependencyManagement>
 </project>
